<resources>
    <string name="app_name">GroceryAdd</string>


    <string name="btn1">Product List</string>
    <string name="btn2">Add Product</string>
    <string name="btn1_img">List</string>
    <string name="btn2_img">Add</string>

    <string name="app_name1">ProductList1</string>
    <string name="bar_name">Product List</string>
    <string name="bar_name1">PList</string>
    <string name="scroll">Scroll</string>
    <string name="i1">Bc</string>
    <string name="ib1">Edit</string>
    <string name="t1">15% off</string>
    <string name="t2">Broccoli</string>
    <string name="t3">Rs.2,990.00</string>
    <string name="t4">1 Kg</string>

    <string name="i2">Banana</string>
    <string name="ib2">Ed1</string>
    <string name="t12">5% off</string>
    <string name="t22">Banana</string>
    <string name="t32">Rs.295.00</string>
    <string name="t42">1 Kg</string>

    <string name="i3">Meat</string>
    <string name="ib3">E1</string>
    <string name="t13">10% off</string>
    <string name="t23">Mutton</string>
    <string name="t33">Rs.3,295.00</string>
    <string name="t43">500 g</string>

    <string name="i4">Meat</string>
    <string name="ib4">e2</string>
    <string name="t14">5% off</string>
    <string name="t24">Full Cream Milk Powder</string>
    <string name="t34">Rs.395.00</string>
    <string name="t44">500 g</string>

    <string name="i5">Beverage</string>
    <string name="ib5">ed3</string>
    <string name="t15">15% off</string>
    <string name="t25">Apple Juice</string>
    <string name="t35">Rs.1,350.00</string>
    <string name="t45">1 L</string>
    <string name="c15">20sp</string>


    <string name="app_name2">add_product</string>
    <string name="bar_name11">Add Product Details</string>
    <string name="bar_name12">PList</string>

    <string name="i11">add_img</string>
    <string name="t123">Product Category</string>
    <string name="text1">    Category</string>
    <string name="t234">    Product Name</string>
    <string name="t345">    Units/ Qty</string>
    <string name="t456">    Unit Price</string>
    <string name="t5">    Offers</string>

    <string name="btn11">Add Product</string>


    <string name="app_name22">addPexamples</string>
    <string name="bar_name22">Edit Product Details</string>
    <string name="bar_name122">PList</string>
    <string name="s_view">Scroll View</string>

    <string name="iex1">add_img</string>
    <string name="textEx1">Product Category</string>
    <string name="tEx2">Enter Product Name</string>
    <string name="tEx3">Units of Product</string>
    <string name="tEx4">Unit Price</string>
    <string name="tEx5">Offers</string>

    <string name="btnEx1">Update</string>
    <string name="btnEx2">Remove</string>


    <string name="name">Gaveesha Wijewardana</string>
    <string name="offer1">20% off</string>
    <string name="categorytext">Categories</string>
    <string name="seealltext1">See All</string>
    <string name="cat1">Vegetables</string>
    <string name="cat2">Fruit</string>
    <string name="cat3">Meat</string>
    <string name="cat4">Spices</string>
    <string name="cat5">Soft Drinks</string>
    <string name="bestsellingtext">Best selling</string>
    <string name="seealltext2">See All</string>
    <string name="offer2">10% Off</string>
    <string name="offer3">25% Off</string>
    <string name="offer4">5% Off</string>


    <string name="pricedescription">"800 LKR per "</string>
    <string name="descriptiontext">Description</string>
    <string name="descriptiontext1">The garden strawberry (Fragaria ananassa) is a widely grown hybrid species of the genus Fragaria, collectively known as the strawberries, which are cultivated worldwide for their fruit. The fruit is widely appreciated for its characteristic aroma, bright red color, juicy texture, and sweetness.</string>
    <string name="pricetext2">Price</string>
    <string name="amounttext">800 LKR</string>
    <string name="addtocarttext">ADD TO CART</string>


    <string name="brocolitext">Broccoli</string>
    <string name="pricetext1">300 LKR per kg</string>
    <string name="descriptiontext2">Description</string>
    <string name="descriptiontext3">Broccoli is an edible green plant in the cabbage family whose large flowering head, stalk and small associated leaves are eaten as a vegetable. Broccoli is classified in the Italica cultivar group of the species Brassica oleracea.</string>
    <string name="pricetext4">Price</string>
    <string name="pricetext3">300 LKR</string>
    <string name="carttext">ADD TO CART</string>


    <string name="chickentext">Chicken 100g            Rs.120.00</string>
    <string name="bestdealstext">Best Deals</string>
    <string name="offer12">13% off</string>
    <string name="offer21">5% off</string>
    <string name="chococookietext">Choco-Cookie 50g  Rs.150.00</string>
    <string name="offer31">20% off</string>
    <string name="fantatext">Fanta 200ml             Rs.300.00</string>
    <string name="offer41">50% off</string>
    <string name="eggplanttext">Eggplant 100g        Rs.80.00</string>
    <string name="offer5">8% off</string>
    <string name="blackpapertext">Blackpaper 100g  Rs.200.00</string>
    <string name="offer6">16% off</string>
    <string name="thilapiyatext">Thilapiya 100g       Rs.200.00</string>

    <string name="sup">This is a linear layout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>