<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="36dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/c12w"
            android:layout_height="@dimen/c12h"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/i1"
            app:srcCompat="@drawable/banana" />

        <TextView
            android:id="@+id/textView244"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:background="@color/light_orange"
            android:padding="6dp"
            android:text="@string/t15"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView244"
            android:layout_marginStart="58dp"
            android:layout_toEndOf="@+id/imageView3"
            android:padding="4dp"
            android:text="@string/t2"
            android:textColor="@color/black"
            android:textSize="@dimen/c14ts"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="58dp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:padding="4dp"
            android:text="@string/t3"
            android:textColor="@color/black"
            android:textSize="@dimen/c15ts"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="58dp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:padding="4dp"
            android:text="@string/t4"
            android:textColor="@color/black"
            android:textSize="@dimen/c16"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/cbutton"
            android:layout_width="62dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="86dp"
            android:background="@color/mid1"
            android:contentDescription="cart"
            android:elevation="4dp"
            android:padding="10dp"
            app:srcCompat="@drawable/baseline_shopping_cart_24" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
